SERVER-18341 Matcher returns false positives in comparison predicates with MinKey/MaxKey

(cherry picked from commit b5291b87ab3350bff9bd9ef4464a63dcda81ac21)